--- a/documentation/c.yaml
+++ b/documentation/c.yaml
@@ -6,91 +6,103 @@ mode: Rule
 log-level: info
 external-controller: 9090
 proxies:
-  - {name: 中国【付费推荐：https://v1.mk/vip】395, server: hn.xiaohouzi.club, port: 48462, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: hn.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】300, server: hn.xiaohouzi.club, port: 18443, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: hn.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】377, server: cs.guanguan.club, port: 41406, type: vmess, uuid: 5707bceb-1da9-41e1-bd03-1bb3d1c28a2c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: cs.guanguan.club}}, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】298, server: hn.xiaohouzi.club, port: 18435, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: hn.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】323, server: iplc.xiaohouzi.club, port: 20018, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: iplc.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 印度尼西亚 001, server: ulist.com.my.asia1.oceis.net, port: 443, type: trojan, password: 94660920-baaa-11ed-b236-205c6d5f5d78, sni: mm.net.my, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】307, server: hn.xiaohouzi.club, port: 18733, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: ajpn03.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 香港【付费推荐：https://v1.mk/vip】225, server: 47.243.111.25, port: 31705, type: vmess, uuid: d0fc2199-6bb4-4559-a7ec-48f3d728500d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
-  - {name: 中国(TG频道@kxswa), server: hnm.xiaohouzi.club, port: 18831, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: hnm.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】278, server: hn01.xiaohouzi.club, port: 16081, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: "%24timotw.xiaohouzi.club", skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】249, server: 180.101.193.226, port: 10068, type: ss, cipher: aes-256-cfb, password: RsDk3peCSuo76B68, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】397, server: hnm.xiaohouzi.club, port: 49353, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: "%24a89.xiaohouzi.club", skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】263, server: hy.guanguan.club, port: 11410, type: vmess, uuid: 5707bceb-1da9-41e1-bd03-1bb3d1c28a2c, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /nba, headers: {Host: hy.guanguan.club}}, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】322, server: iplc.xiaohouzi.club, port: 20015, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: iplc.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】273, server: hn.xiaohouzi.club, port: 14185, type: trojan, password: 0f098bb2-9fad-3cc3-8acf-2a3268c1eb27, sni: hktnew01.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 美国3号-0.1x, server: zfc.windowsupdate1.com, port: 443, type: vmess, uuid: 3855b736-bf24-461f-b5b9-1d3f04484b37, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: "/yfjc/us3?ed=2048", headers: {Host: us3.yfjc.sbs}}, udp: true}
-  - {name: 美国 051, server: singapore-m2.4422331.xyz, port: 10086, type: trojan, password: 4134219f-2384-449c-92e9-50fe8474c30a, sni: https%3a%2f%2fmofa.4422331.xyz, skip-cert-verify: true, udp: true}
+  - {name: 美国 062, server: us.disnet.gq, port: 443, type: trojan, password: 7c7e0edb-c45a-4c07-b66a-69b191179349, skip-cert-verify: true, udp: true}
+  - {name: "_NL_荷兰\r_2", server: 185.212.200.76, port: 443, type: trojan, password: Sp3eDVp, skip-cert-verify: true, udp: true}
+  - {name: "_CN_中国->🇹🇼_TW_台湾\r", server: 500.sayitfree.website, port: 61003, type: ss, cipher: chacha20-ietf-poly1305, password: 3307ba30-a638-490a-9910-672c4049a722, udp: true}
+  - {name: _HK_香港_1, server: 8.218.178.58, port: 53207, type: vmess, uuid: 9930e472-959f-4649-aa19-09354073fabc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: 中国【付费推荐：https://v1.mk/vip】305, server: hn.xiaohouzi.club, port: 18581, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: hn.xiaohouzi.club, skip-cert-verify: true, udp: true}
+  - {name: _HK_香港_6, server: 8.218.168.163, port: 42675, type: vmess, uuid: 6f532e4c-1ea2-4e1d-a18a-af34c766ea02, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: US_SSRSUB_175, server: 103.21.244.173, port: 80, type: vmess, uuid: f7738290-ba04-4dd1-b4f3-e6863a9e1c8a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: zzsg.nmsl.pics}}, udp: true}
+  - {name: _TW_台湾, server: twweb.dashedu.net, port: 50516, type: vmess, uuid: dd28265e-cda9-4638-8072-93170203f71a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, udp: true}
+  - {name: _HK_香港_1 2, server: 8.218.184.220, port: 52214, type: vmess, uuid: 3b776f57-8b04-498e-89d7-cb5c640eede8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: _HK_香港_5, server: 8.218.183.217, port: 64098, type: vmess, uuid: 7243a003-b59a-4686-b460-950fdf61819b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: 香港【付费推荐：https://v1.mk/vip】457, server: 8.218.150.152, port: 45106, type: vmess, uuid: aa7f7fd3-8f88-45c7-9e27-a03380d6cc89, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: _HK_香港_4, server: 47.243.174.8, port: 26234, type: vmess, uuid: 2f0e176d-c1a4-4672-90cb-e81a80c7e684, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: 澳大利亚 002, server: 43.156.110.222, port: 39630, type: vmess, uuid: f21f434d-8097-4302-9c0c-0b0c7dffcfcb, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /sg6/getData, headers: {Host: sg6.verichains.co}}, udp: true}
+  - {name: v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7, server: 173.245.49.8, port: 443, type: vmess, uuid: 9a18cbb1-81d2-4720-9f09-46ea276b6ddb, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /huhublog, headers: {Host: zhuyong.hucloud-dns.xyz}}, udp: true}
+  - {name: v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1, server: surongwei.eu.org, port: 443, type: vmess, uuid: 6093eefb-7ab6-41df-aba0-d5fa58147e10, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /reffs7y26g0ua, headers: {Host: surongwei.eu.org}}, udp: true}
+  - {name: "_KR_韩国\r_3", server: op.en.usdeth.top, port: 449, type: trojan, password: 9a9326c1-d05c-4c6c-bd8b-509a69143639, sni: op.en.usdeth.top, skip-cert-verify: true, udp: true}
+  - {name: 「SCP」NL-CF, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 823c31da-701f-483d-b36e-896e5cf0987a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /shirker, headers: {Host: nl1.scproxy.top}}, udp: true}
+  - {name: v2rayfree.eu.org - 法国格拉沃利讷OVH 9, server: t3.teslacdn2.live, port: 443, type: trojan, password: e1c12e6f-a555-4ff8-b071-1e09dd5d91e6, skip-cert-verify: true, udp: true}
+  - {name: 阿联酋(TG频道@kxswa), server: dubai-m.4422331.xyz, port: 10086, type: trojan, password: 4134219f-2384-449c-92e9-50fe8474c30a, sni: dubai-m.4422331.xyz, skip-cert-verify: true, udp: true}
+  - {name: _HK_香港_2, server: 8.218.181.75, port: 57408, type: vmess, uuid: a93df277-c3a8-4948-abd1-663722cb32b0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: ♻️ 自动选择
     type: url-test
     url: https://www.youtube.com/generate_204
     interval: 300
     proxies:
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: 🎥 NETFLIX
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -109,96 +121,116 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 香港【付费推荐：https://v1.mk/vip】225
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - _HK_香港_6
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - _HK_香港_2
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -214,23 +246,26 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 中国【付费推荐：https://v1.mk/vip】395
-      - 中国【付费推荐：https://v1.mk/vip】300
-      - 中国【付费推荐：https://v1.mk/vip】377
-      - 中国【付费推荐：https://v1.mk/vip】298
-      - 中国【付费推荐：https://v1.mk/vip】323
-      - 印度尼西亚 001
-      - 中国【付费推荐：https://v1.mk/vip】307
-      - 香港【付费推荐：https://v1.mk/vip】225
-      - 中国(TG频道@kxswa)
-      - 中国【付费推荐：https://v1.mk/vip】278
-      - 中国【付费推荐：https://v1.mk/vip】249
-      - 中国【付费推荐：https://v1.mk/vip】397
-      - 中国【付费推荐：https://v1.mk/vip】263
-      - 中国【付费推荐：https://v1.mk/vip】322
-      - 中国【付费推荐：https://v1.mk/vip】273
-      - 美国3号-0.1x
-      - 美国 051
+      - 美国 062
+      - "_NL_荷兰\r_2"
+      - "_CN_中国->🇹🇼_TW_台湾\r"
+      - _HK_香港_1
+      - 中国【付费推荐：https://v1.mk/vip】305
+      - _HK_香港_6
+      - US_SSRSUB_175
+      - _TW_台湾
+      - _HK_香港_1 2
+      - _HK_香港_5
+      - 香港【付费推荐：https://v1.mk/vip】457
+      - _HK_香港_4
+      - 澳大利亚 002
+      - v2rayfree.eu.org - 美国弗吉尼亚州阿什本NV NEXT数据中心 7
+      - v2rayfree.eu.org - 韩国首尔Oracle云计算数据中心 1
+      - "_KR_韩国\r_3"
+      - 「SCP」NL-CF
+      - v2rayfree.eu.org - 法国格拉沃利讷OVH 9
+      - 阿联酋(TG频道@kxswa)
+      - _HK_香港_2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
