--- a/documentation/c.yaml
+++ b/documentation/c.yaml
@@ -6,127 +6,51 @@ mode: Rule
 log-level: info
 external-controller: 9090
 proxies:
-  - {name: 美国 034, server: dejs.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 036, server: uk.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 031, server: cajs.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 032, server: chjs.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 033, server: cljs.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 022, server: hk80-2.af49c4e4c2ef.sanfen001.pics, port: 80, type: vmess, uuid: 8216e1fd-7f67-440d-9a63-51d0f6c38b10, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /zh-cn/, headers: {Host: hk80-2.af49c4e4c2ef.sanfen001.pics}}, udp: true}
-  - {name: _PA_巴拿马_欢迎订阅yui科技_101, server: 185.143.220.25, port: 443, type: vmess, uuid: f28e354e-c2d1-4983-9b07-5acaf1b3b3e5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /6e9EtZ2dL}, udp: true}
-  - {name: 美国 035, server: de.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 030, server: aujs.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 日本(TG@kxswa), server: jp2.af49c4e4c2ef.sanfen001.pics, port: 443, type: vmess, uuid: da9d5c74-a572-4cf4-a375-19b886f5ffc4, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /zh-cn, headers: {Host: jp2.af49c4e4c2ef.sanfen001.pics}}, udp: true}
-  - {name: 伯利兹_0318028, server: 203.30.188.1, port: 443, type: vmess, uuid: 40d496a6-ceeb-4096-baeb-4cc52b205621, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /ECTCJ0DF, headers: {Host: 154.v2ray3.xyz}}, udp: true}
-  - {name: 美国(TG@kxswa), server: 204.216.214.102, port: 44386, type: trojan, password: C931CWacy8, skip-cert-verify: true, udp: true}
-  - {name: "@SSRSUB-V07-付费推荐:suo.yt/ssrsub", server: 23.227.38.23, port: 443, type: vmess, uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /AUIKN8AU, headers: {Host: oplg1.cfcdn2.xyz}}, udp: true}
-  - {name: "@SSRSUB-V12-付费推荐:suo.yt/ssrsub", server: 172.67.164.123, port: 443, type: vmess, uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /AUIKN8AU, headers: {Host: oplg1.cfcdn2.xyz}}, udp: true}
-  - {name: 美国 039, server: nf.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 美国 014, server: jp2.af49c4e4c2ef.sanfen001.pics, port: 443, type: vmess, uuid: da9d5c74-a572-4cf4-a375-19b886f5ffc4, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /zh-cn, headers: {Host: www.microsoft.com}}, udp: true}
-  - {name: 美国 015, server: sg4.af49c4e4c2ef.sanfen001.pics, port: 443, type: vmess, uuid: da9d5c74-a572-4cf4-a375-19b886f5ffc4, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】135, server: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, port: 12346, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: oiugbalxawdfas.vzwzasc.cn, skip-cert-verify: true, udp: true}
-  - {name: 美国 038, server: swejs.stablize.top, port: 443, type: trojan, password: f426b848-6c75-47bc-b116-c9b40f6f8bc3, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://v1.mk/vip】122, server: hnm.xiaohouzi.club, port: 47651, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: taiguo.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11, server: 35.157.193.176, port: 8080, type: vmess, uuid: 7a173658-c9f9-4194-84dd-4c50a83134ee, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: sptest.hostiran.net.prod.hosts.ooklaserver.net}}, udp: true}
-  - {name: v2rayfree.eu.org - 日本  6, server: 43.159.196.4, port: 46994, type: vmess, uuid: 00e35854-8706-470e-af31-e30e557e7e5e, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /hk3/getData, headers: {Host: hk3.linkeden.co}}, udp: true}
   - {name: _CN_中国->🇺🇸_US_美国, server: oss-cn-shanghai.westdatacloud.top, port: 20048, type: trojan, password: 626351FA-3CA6-8118-FADF-CCDBCD620871, sni: oss-cn-shanghai.westdatacloud.top, skip-cert-verify: true, udp: true}
-  - {name: 美国 019, server: 199.115.228.40, port: 6337, type: ss, cipher: aes-256-gcm, password: 6cUPm6BMWPZAbySE, udp: true}
-  - {name: v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12, server: 114c.p9966.shop, port: 443, type: vmess, uuid: 14bc30c2-763f-4b06-9378-15d6d32d4500, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /racevpn, headers: {Host: 114c.p9966.shop}}, udp: true}
-  - {name: 美国 013, server: hk6.af49c4e4c2ef.sanfen001.pics, port: 443, type: vmess, uuid: da9d5c74-a572-4cf4-a375-19b886f5ffc4, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /zh-cn, headers: {Host: www.microsoft.com}}, udp: true}
+  - {name: 香港(TG@kxswa), server: 8.218.226.112, port: 20329, type: vmess, uuid: 2f999df9-07d0-42a5-8423-2b0b69b9fa0a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: 香港(TG@kxswa) 2, server: 8.218.227.58, port: 57005, type: vmess, uuid: fcb1a085-2c74-4ed5-829c-bcff003cfbad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: _HK_香港_8, server: 8.218.70.44, port: 53908, type: vmess, uuid: 48d927af-a825-4384-b805-a0b4782c980b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: 印度(TG@kxswa), server: 152.70.74.66, port: 443, type: trojan, password: d906afe5-7c3c-4ddc-aaa4-61c154a82e5e, skip-cert-verify: true, udp: true}
+  - {name: 中国【付费推荐：https://v1.mk/vip】122, server: hnm.xiaohouzi.club, port: 47651, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: taiguo.xiaohouzi.club, skip-cert-verify: true, udp: true}
+  - {name: 中国【付费推荐：https://v1.mk/vip】89, server: hn.xiaohouzi.club, port: 18733, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: ajpn03.xiaohouzi.club, skip-cert-verify: true, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: ♻️ 自动选择
     type: url-test
     url: https://www.youtube.com/generate_204
     interval: 300
     proxies:
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: 🎥 NETFLIX
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -145,131 +69,58 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -285,32 +136,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 美国 034
-      - 美国 036
-      - 美国 031
-      - 美国 032
-      - 美国 033
-      - 美国 022
-      - _PA_巴拿马_欢迎订阅yui科技_101
-      - 美国 035
-      - 美国 030
-      - 日本(TG@kxswa)
-      - 伯利兹_0318028
-      - 美国(TG@kxswa)
-      - "@SSRSUB-V07-付费推荐:suo.yt/ssrsub"
-      - "@SSRSUB-V12-付费推荐:suo.yt/ssrsub"
-      - 美国 039
-      - 美国 014
-      - 美国 015
-      - 中国【付费推荐：https://v1.mk/vip】135
-      - 美国 038
-      - 中国【付费推荐：https://v1.mk/vip】122
-      - v2rayfree.eu.org - 德国黑森州法兰克福Amazon数据中心 11
-      - v2rayfree.eu.org - 日本  6
       - _CN_中国->🇺🇸_US_美国
-      - 美国 019
-      - v2rayfree.eu.org - 美国CloudFlare公司CDN节点 12
-      - 美国 013
+      - 香港(TG@kxswa)
+      - 香港(TG@kxswa) 2
+      - _HK_香港_8
+      - 印度(TG@kxswa)
+      - 中国【付费推荐：https://v1.mk/vip】122
+      - 中国【付费推荐：https://v1.mk/vip】89
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
