--- a/documentation/b.yaml
+++ b/documentation/b.yaml
@@ -6,119 +6,83 @@ mode: Rule
 log-level: info
 external-controller: 9090
 proxies:
-  - {name: 日本 009, server: jp-am48-6.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: eAokbaDN6, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: "", udp: true}
-  - {name: "[03-21]-🇯🇵-日本-057-43.207.117.53", server: 43.207.117.53, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05, udp: true}
-  - {name: 香港(TG@kxswa), server: 8.218.194.198, port: 59383, type: vmess, uuid: fa530a36-1b07-46ef-9f89-620070640d71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
-  - {name: 二爷翻墙 https://1808.ga Node_55, server: 31.wgong1.top, port: 52231, type: vmess, uuid: 51541205-a5d5-33d1-a915-f885cfc229e1, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, udp: true}
+  - {name: 日本 003, server: 43.207.110.173, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05, udp: true}
+  - {name: "[03-22]-🇯🇵-日本-036-43.207.66.114", server: 43.207.66.114, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05, udp: true}
+  - {name: 中国【付费推荐：https://tt.vg/vip】28, server: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, port: 12346, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: oiugbalxawdfas.vzwzasc.cn, skip-cert-verify: true, udp: true}
   - {name: 中国【付费推荐：https://tt.vg/vip】26, server: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, port: 12323, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】31, server: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, port: 12324, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, skip-cert-verify: true, udp: true}
-  - {name: 日本 013, server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /oooo, headers: {Host: v6.heduian.online}}, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】34, server: us-cn-hk-relay-2-3cc426.ferryhwp8ebm.com, port: 7302, type: trojan, password: f2fc982f-3462-11e9-96d3-020b85e0a428, sni: us-cn-hk-relay-2-3cc426.ferryhwp8ebm.com, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】27, server: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, port: 12343, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】24, server: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, port: 12344, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: iyvwbaniohxcsawa.vzwzasc.cn, skip-cert-verify: true, udp: true}
-  - {name: 美国(TG@kxswa), server: 204.216.214.102, port: 44386, type: trojan, password: C931CWacy8, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】30, server: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, port: 12347, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, skip-cert-verify: true, udp: true}
-  - {name: 香港(TG@kxswa) 2, server: 8.218.226.112, port: 20329, type: vmess, uuid: 2f999df9-07d0-42a5-8423-2b0b69b9fa0a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
-  - {name: "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net", server: jp-am48-6.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: eAokbaDN6, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: PT09PQ==, obfs-param: PT09PQ==, udp: true}
-  - {name: sg-am3.eqsunshine.com:32001, server: sg-am3.eqsunshine.com, port: 32001, type: ssr, cipher: aes-256-cfb, password: 3g0dHlKME, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: "", udp: true}
-  - {name: _CN_中国->🇸🇬_SG_新加坡, server: 34.wgong1.top, port: 52234, type: vmess, uuid: f0330805-d5d5-3cf2-95a2-2195ff5aaf9b, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, udp: true}
-  - {name: 香港(TG@kxswa) 3, server: 8.218.225.242, port: 33712, type: vmess, uuid: 9639a882-a0bc-4d26-8955-24a49d6cfe4c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】25, server: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, port: 12341, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: lv2iwahxwawhooiixzawx.occwaszxjjhwx.cyou, skip-cert-verify: true, udp: true}
-  - {name: 美国【付费推荐：https://tt.vg/vip】39, server: 167.88.63.79, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】15, server: hn.xiaohouzi.club, port: 18735, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: ajpn05.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 中国【付费推荐：https://tt.vg/vip】22, server: hnm.xiaohouzi.club, port: 18831, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: avas01.xiaohouzi.club, skip-cert-verify: true, udp: true}
-  - {name: 香港(TG@kxswa) 4, server: 8.218.225.146, port: 25076, type: vmess, uuid: de035cbd-9c64-45b3-8485-bae38a33bd3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/]}, udp: true}
+  - {name: 中国【付费推荐：https://tt.vg/vip】19, server: hnm.xiaohouzi.club, port: 27094, type: trojan, password: 21e10785-99c6-316e-a184-a03384ee06e5, sni: siga01.xiaohouzi.club, skip-cert-verify: true, udp: true}
+  - {name: 韩国【付费推荐：https://tt.vg/vip】54, server: 43.201.146.250, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05, udp: true}
+  - {name: 中国【付费推荐：https://tt.vg/vip】29, server: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, port: 12348, type: trojan, password: 001a5927-bcf7-368a-8a4d-cb8c2fd6aab5, sni: lv3oiwdaxsaowhdnjkzxw.occwaszxjjhwx.cyou, skip-cert-verify: true, udp: true}
+  - {name: 澳大利亚 011, server: 43.201.70.114, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05, udp: true}
+  - {name: "IEPL-AP-TW-1[ran-out](trojan)", server: delivery.flareai.site, port: 13343, type: trojan, password: b5181de8-66d4-4f8f-904c-23e606303a13, sni: 106-110-192-225.d.cjjd20.com, skip-cert-verify: true, udp: true}
   - {name: 印度(TG@kxswa), server: 152.70.74.66, port: 443, type: trojan, password: d906afe5-7c3c-4ddc-aaa4-61c154a82e5e, skip-cert-verify: true, udp: true}
-  - {name: "|14.67Mb", server: 43.153.224.144, port: 45729, type: vmess, uuid: d2051816-2906-462b-8695-aa7caeb5b902, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /sg1/getData, headers: {Host: sg1.linkeden.co}}, udp: true}
+  - {name: 荷兰, server: 146.19.215.165, port: 443, type: trojan, password: 2ea5fc44-bd38-4fb0-a9b9-88c83fc56622, sni: 4-193-105-141.nhost.00cdn.com, skip-cert-verify: true, udp: true}
+  - {name: 中国(TG@kxswa), server: oss-cn-shanghai.westdatacloud.top, port: 20048, type: trojan, password: 626351FA-3CA6-8118-FADF-CCDBCD620871, sni: oss-cn-shanghai.westdatacloud.top, skip-cert-verify: true, udp: true}
+  - {name: 德国, server: 89.163.224.122, port: 443, type: trojan, password: 2ea5fc44-bd38-4fb0-a9b9-88c83fc56622, sni: 4-193-105-141.nhost.00cdn.com, skip-cert-verify: true, udp: true}
+  - {name: HK-104.208.101.208-199, server: ru.mjt001.com, port: 443, type: trojan, password: 5a035db3-34ea-48ca-9aa2-72c8229e1532, sni: ru.mjt001.com, skip-cert-verify: true, udp: true}
+  - {name: 美国凤凰城1号, server: 148.59.74.196, port: 443, type: trojan, password: 2ea5fc44-bd38-4fb0-a9b9-88c83fc56622, sni: 4-193-105-141.nhost.00cdn.com, skip-cert-verify: true, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: ♻️ 自动选择
     type: url-test
     url: https://www.youtube.com/generate_204
     interval: 300
     proxies:
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: 🎥 NETFLIX
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -137,127 +101,87 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 香港(TG@kxswa)
-      - 香港(TG@kxswa) 2
-      - 香港(TG@kxswa) 3
-      - 香港(TG@kxswa) 4
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -273,30 +197,21 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 日本 009
-      - "[03-21]-🇯🇵-日本-057-43.207.117.53"
-      - 香港(TG@kxswa)
-      - 二爷翻墙 https://1808.ga Node_55
+      - 日本 003
+      - "[03-22]-🇯🇵-日本-036-43.207.66.114"
+      - 中国【付费推荐：https://tt.vg/vip】28
       - 中国【付费推荐：https://tt.vg/vip】26
-      - 中国【付费推荐：https://tt.vg/vip】31
-      - 日本 013
-      - 中国【付费推荐：https://tt.vg/vip】34
-      - 中国【付费推荐：https://tt.vg/vip】27
-      - 中国【付费推荐：https://tt.vg/vip】24
-      - 美国(TG@kxswa)
-      - 中国【付费推荐：https://tt.vg/vip】30
-      - 香港(TG@kxswa) 2
-      - "[03-21]-🇯🇵-日本-214-jp-am48-6.eqnode.net"
-      - sg-am3.eqsunshine.com:32001
-      - _CN_中国->🇸🇬_SG_新加坡
-      - 香港(TG@kxswa) 3
-      - 中国【付费推荐：https://tt.vg/vip】25
-      - 美国【付费推荐：https://tt.vg/vip】39
-      - 中国【付费推荐：https://tt.vg/vip】15
-      - 中国【付费推荐：https://tt.vg/vip】22
-      - 香港(TG@kxswa) 4
+      - 中国【付费推荐：https://tt.vg/vip】19
+      - 韩国【付费推荐：https://tt.vg/vip】54
+      - 中国【付费推荐：https://tt.vg/vip】29
+      - 澳大利亚 011
+      - IEPL-AP-TW-1[ran-out](trojan)
       - 印度(TG@kxswa)
-      - "|14.67Mb"
+      - 荷兰
+      - 中国(TG@kxswa)
+      - 德国
+      - HK-104.208.101.208-199
+      - 美国凤凰城1号
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
