--- a/documentation/b.yaml
+++ b/documentation/b.yaml
@@ -3,7 +3,7 @@ port: 7890
 socks-port: 7891
 allow-lan: true
 mode: Rule
-log-level: infoa
+log-level: info
 external-controller: 9090
 proxies:
   - {name: 二爷翻墙 https://1808.ga  节点_3, server: cf-lt.sharecentre.online, port: 443, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /shirker, headers: {Host: in.sharecentrepro.com}}, udp: true}
