--- a/documentation/a.yaml
+++ b/documentation/a.yaml
@@ -6,131 +6,39 @@ mode: Rule
 log-level: info
 external-controller: 9090
 proxies:
-  - {name: 加拿大 088, server: mrb2.shabijichang.com, port: 80, type: vmess, uuid: 53701585-591f-48a3-9515-8831ed0524ac, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: mrb2.shabijichang.com}}, udp: true}
-  - {name: V006--US-付费推荐:dlj.tf/ssrsub, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v03.ssrsub.com}}, udp: true}
-  - {name: _US_美国->🇱🇺_LU_卢森堡, server: cf.yx.alue.link, port: 2052, type: vmess, uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: lu.wx.alue.link}}, udp: true}
-  - {name: V023--US-付费推荐:dlj.tf/ssrsub, server: ns1.v2-vip.fun, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v006.ssrsub.com}}, udp: true}
-  - {name: V016--US-付费推荐:dlj.tf/ssrsub, server: singapore.com, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v004.ssrsub.com}}, udp: true}
-  - {name: _US_美国->🇳🇱_NL_荷兰, server: 45.199.138.191, port: 30000, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /path/1696251522438}, udp: true}
-  - {name: V011--US-付费推荐:dlj.tf/ssrsub, server: ns1.v2-vip.fun, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v002.ssrsub.com}}, udp: true}
-  - {name: V009--US-付费推荐:dlj.tf/ssrsub, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v001.ssrsub.com}}, udp: true}
-  - {name: V012--US-付费推荐:dlj.tf/ssrsub, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v002.ssrsub.com}}, udp: true}
-  - {name: V015--US-付费推荐:dlj.tf/ssrsub, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v003.ssrsub.com}}, udp: true}
-  - {name: V014--US-付费推荐:dlj.tf/ssrsub, server: ns1.v2-vip.fun, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v003.ssrsub.com}}, udp: true}
-  - {name: V017--US-付费推荐:dlj.tf/ssrsub, server: ns1.v2-vip.fun, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v004.ssrsub.com}}, udp: true}
-  - {name: _US_美国->🇱🇺_LU_卢森堡 2, server: 104.16.68.38, port: 2052, type: vmess, uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: lu.wx.alue.link}}, udp: true}
-  - {name: V010--US-付费推荐:dlj.tf/ssrsub, server: singapore.com, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v002.ssrsub.com}}, udp: true}
-  - {name: _US_美国_4, server: 45.199.138.222, port: 30000, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /path/1696251693048}, udp: true}
-  - {name: V021--US-付费推荐:dlj.tf/ssrsub, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v005.ssrsub.com}}, udp: true}
-  - {name: V022--US-付费推荐:dlj.tf/ssrsub, server: singapore.com, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v006.ssrsub.com}}, udp: true}
-  - {name: github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3, server: 67.21.90.5, port: 443, type: vmess, uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /path/1694429908748, headers: {Host: www.75409854.xyz}}, udp: true}
-  - {name: github.com/freefq - 美国  4, server: 2023-10.cfcdn.link, port: 80, type: vmess, uuid: 11111ad6-32cd-4bbb-9247-421878e0c7bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /cctv13.m3u8, headers: {Host: us05.cctvvip.tk}}, udp: true}
-  - {name: github.com/freefq - 美国  17, server: ryoza-1088-v2-1.d-kcd.tuil.xyz, port: 888, type: vmess, uuid: b00a4568-6396-44c6-8697-f1d1600ba9fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /je5x3pBN1vez3NQudNkB, headers: {Host: s3.cjhh.beauty}}, udp: true}
-  - {name: V020--US-付费推荐:dlj.tf/ssrsub, server: ns1.v2-vip.fun, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v005.ssrsub.com}}, udp: true}
-  - {name: _US_美国, server: ns1.v2-vip.fun, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v03.ssrsub.com}}, udp: true}
-  - {name: 加拿大 145, server: 104.17.88.252, port: 2082, type: vmess, uuid: 6388bd92-6cbc-4b72-a9a6-931f071d0ffa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /phosphorylative.aurorainiceland.com/nimvws, headers: {Host: erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev}}, udp: true}
-  - {name: V018--US-付费推荐:dlj.tf/ssrsub, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: bffa23aa-ae0a-4c02-af77-2a14c8c0b81c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /api/v3/download.getFile, headers: {Host: ssrsub.v004.ssrsub.com}}, udp: true}
-  - {name: _US_美国->🇳🇱_NL_荷兰 2, server: 45.199.138.191, port: 30000, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /path/1696251522438, headers: {Host: www.42077230.xyz}}, udp: true}
-  - {name: 加拿大 128, server: 172.67.69.247, port: 8880, type: vmess, uuid: 67a341a7-5ae7-4d92-edad-9e8db87ce165, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {Host: vcus1.vpn66.eu.org}}, udp: true}
-  - {name: github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1, server: 45.199.138.222, port: 30000, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /path/1696251693048, headers: {Host: www.19229362.xyz}}, udp: true}
+  - {name: NO_speednode_0009, server: 165.231.120.102, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3, udp: true}
+  - {name: SE_speednode_0010, server: 195.181.166.175, port: 443, type: ss, cipher: aes-256-cfb, password: asdKkaskJKfnsa, udp: true}
+  - {name: SE_speednode_0011, server: 195.181.166.170, port: 443, type: ss, cipher: aes-256-cfb, password: asdKkaskJKfnsa, udp: true}
+  - {name: GB_speednode_0004, server: 51.142.175.151, port: 57760, type: ss, cipher: chacha20-ietf-poly1305, password: 3R7H08YucqZTXDGnwDoVzd, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: ♻️ 自动选择
     type: url-test
     url: https://www.youtube.com/generate_204
     interval: 300
     proxies:
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: 🎥 NETFLIX
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -149,33 +57,10 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -186,98 +71,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -293,33 +109,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 加拿大 088
-      - V006--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡
-      - V023--US-付费推荐:dlj.tf/ssrsub
-      - V016--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰
-      - V011--US-付费推荐:dlj.tf/ssrsub
-      - V009--US-付费推荐:dlj.tf/ssrsub
-      - V012--US-付费推荐:dlj.tf/ssrsub
-      - V015--US-付费推荐:dlj.tf/ssrsub
-      - V014--US-付费推荐:dlj.tf/ssrsub
-      - V017--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇱🇺_LU_卢森堡 2
-      - V010--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国_4
-      - V021--US-付费推荐:dlj.tf/ssrsub
-      - V022--US-付费推荐:dlj.tf/ssrsub
-      - github.com/freefq - 美国加利福尼亚州洛杉矶SharkTech数据中心 3
-      - github.com/freefq - 美国  4
-      - github.com/freefq - 美国  17
-      - V020--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国
-      - 加拿大 145
-      - V018--US-付费推荐:dlj.tf/ssrsub
-      - _US_美国->🇳🇱_NL_荷兰 2
-      - 加拿大 128
-      - github.com/freefq - 美国加利福尼亚州圣何塞MULTACOM机房 1
+      - NO_speednode_0009
+      - SE_speednode_0010
+      - SE_speednode_0011
+      - GB_speednode_0004
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
